Fix scrollbar in captcha bug.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1403,7 +1403,7 @@ input.field.tripped:not(:hover):not(:focus) {
 :root.ua-edge #qr .captcha-container > div > div:first-of-type {
   overflow-y: scroll;
   overflow-x: hidden;
-  padding-right: 15px;
+  padding-right: 30px;
   height: 99%;
   width: 100%;
 }
